--- a/frontend/geral.html
+++ b/frontend/geral.html
@@ -64,6 +64,7 @@
         <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
         <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
     </div>
+    <button type="button" class="btn btn-warning mb-3" onclick="limparCampos()">Limpar</button>
     <div class="container">
         <div class="row mb-2">
             <div class="col-md-4">
@@ -249,6 +250,12 @@
         if(page.includes('plano')) document.getElementById('btn-plano').classList.add('active');
         if(page.includes('panorama')) document.getElementById('btn-panorama').classList.add('active');
     };
+    function limparCampos() {
+        document.querySelectorAll('input[type="text"], input[type="number"]').forEach(function(input) {
+            input.value = '';
+            if (input.id) localStorage.removeItem(input.id);
+        });
+    }
     </script>
 </body>
 </html> 
