--- a/frontend/dados-socioeconomicos.html
+++ b/frontend/dados-socioeconomicos.html
@@ -47,6 +47,7 @@
     </div>
     <div class="container">
         <h1>Dados Socioeconômicos do Consumidor</h1>
+        <button type="button" class="btn btn-warning mb-3" onclick="limparCampos()">Limpar</button>
         <form id="socForm">
             <div class="row g-4">
                 <div class="col-md-6">
@@ -158,6 +159,13 @@
                 };
             });
         };
+        function limparCampos() {
+            document.querySelectorAll('input[type="text"], input[type="number"]').forEach(function(input) {
+                input.value = '';
+                if (input.id) localStorage.removeItem(input.id);
+            });
+            atualizarTotais();
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
