--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -57,6 +57,7 @@
 </div>
 <div class="container">
     <h1>Plano de Pagamento</h1>
+    <button type="button" class="btn btn-warning mb-3" onclick="limparCampos()">Limpar</button>
     <!-- Tabela de Parâmetros do Plano -->
     <form id="planoForm">
         <div class="row mb-4">
@@ -335,6 +336,14 @@ window.onload = function() {
   if(page.includes('plano')) document.getElementById('btn-plano').classList.add('active');
   if(page.includes('panorama')) document.getElementById('btn-panorama').classList.add('active');
 };
+
+function limparCampos() {
+  document.querySelectorAll('input[type="text"], input[type="number"]').forEach(function(input) {
+    input.value = '';
+    if (input.id) localStorage.removeItem(input.id);
+  });
+  calcularDividas();
+}
 </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
