--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -14,7 +14,7 @@
         .table-bordered th, .table-bordered td { border: 1px solid #333 !important; }
         .total-row { font-weight: bold; background: #f0f0f0; }
         .subtotal-row { font-weight: bold; background: #e0e0e0; }
-        .input-sm { max-width: 90px; }
+        .input-sm { max-width: 80px; }
         .input-xs { max-width: 60px; }
         .input-md { max-width: 120px; }
         .input-lg { max-width: 180px; }
@@ -70,10 +70,10 @@
                         <th>Qtde. de Parcelas</th>
                     </tr>
                     <tr>
-                        <td><input type="number" step="0.01" min="0" max="1" id="comprometida" class="form-control input-xs" value="0.3"></td>
+                        <td><input type="number" step="0.01" min="0" max="1" id="comprometida" class="form-control input-sm" value="0.3"></td>
                         <td><input type="text" id="margem" class="form-control input-md bg-light-green" readonly></td>
-                        <td><input type="number" step="1" min="1" id="mesesQuitar" class="form-control input-xs" value="0"></td>
-                        <td><input type="number" step="1" min="1" id="qtdeParcelas" class="form-control input-xs" value="0"></td>
+                        <td><input type="number" step="1" min="1" id="mesesQuitar" class="form-control input-sm" value="0"></td>
+                        <td><input type="number" step="1" min="1" id="qtdeParcelas" class="form-control input-sm" value="0"></td>
                     </tr>
                 </table>
             </div>
