--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -83,6 +83,9 @@
             border: 2px solid #000;
             background: #90ff90;
             margin-bottom: 30px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         .nav-btn {
             flex: 1;
