--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -30,39 +30,54 @@
             .container { padding: 10px; }
         }
         #custom-navbar {
-            margin-bottom: 30px;
             position: sticky;
             top: 0;
             z-index: 1000;
+            display: flex;
+            background: linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);
+            box-shadow: 0 2px 8px #0002;
+            border-radius: 0 0 16px 16px;
+            padding: 0 16px;
+            margin-bottom: 30px;
+            border: none;
         }
         .nav-btn {
-            flex:1;
-            background:#90ff90;
-            border:none;
-            border-right:1px solid #fff;
-            font-size:1.2em;
-            padding:12px 0;
-            cursor:pointer;
-            transition: background 0.2s, font-weight 0.2s;
+            flex: 1;
+            background: transparent;
+            border: none;
+            font-size: 1.15em;
+            padding: 16px 0;
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s, font-weight 0.2s;
+            color: #2d5c2f;
+            border-bottom: 3px solid transparent;
+            border-radius: 0 0 12px 12px;
+            margin: 0 4px;
         }
-        .nav-btn:last-child { border-right:none; }
+        .nav-btn:focus,
+        .nav-btn:active,
+        .nav-btn:hover,
         .nav-btn.active {
-            background:#baffba;
-            font-weight:bold;
-            outline:2px solid #000;
+            background: #baffba;
+            color: #007a00;
+            font-weight: bold;
+            border-bottom: 3px solid #007a00;
+            outline: none;
         }
     </style>
 </head>
 <body>
-<div id="custom-navbar" style="display:flex; border:2px solid #000; background:#90ff90;">
+<div id="custom-navbar">
   <button onclick="window.location.href='dados-socioeconomicos.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
   <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
   <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
   <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
 </div>
 <div class="container">
-    <h1>Plano de Pagamento</h1>
-    <button type="button" class="btn btn-warning mb-3" onclick="limparCampos()">Limpar</button>
+    <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px;">
+        <h1>Plano de Pagamento</h1>
+        <button type="button" class="btn btn-warning mb-3" style="background:#baffba; color:#2d5c2f; border:none; font-weight:bold;" onclick="limparCampos()">Limpar</button>
+    </div>
     <!-- Tabela de Parâmetros do Plano -->
     <form id="planoForm">
         <div class="row mb-4">
@@ -77,8 +92,8 @@
                     <tr>
                         <td><input type="number" step="0.1" min="0" max="100" id="comprometida" class="form-control input-sm" value="30"></td>
                         <td><input type="text" id="margem" class="form-control input-md bg-light-green" readonly></td>
-                        <td><input type="number" step="1" min="1" id="mesesQuitar" class="form-control input-sm" value="0"></td>
-                        <td><input type="number" step="1" min="1" id="qtdeParcelas" class="form-control input-sm" value="0"></td>
+                        <td><input type="number" step="1" min="2" id="mesesQuitar" class="form-control input-sm" value="2"></td>
+                        <td><input type="number" step="1" min="2" id="qtdeParcelas" class="form-control input-sm" value="2"></td>
                     </tr>
                 </table>
             </div>
@@ -184,7 +199,11 @@ function calcularDividas() {
     document.getElementById('margem').value = formatBRL(margem);
     console.log(receitaTotal, pctComprometida, margem);
     const mesesQuitar = parseInt(document.getElementById('mesesQuitar').value) || 0;
-    const qtdeParcelas = parseInt(document.getElementById('qtdeParcelas').value) || 0;
+    let qtdeParcelas = parseInt(document.getElementById('qtdeParcelas').value) || 0;
+    if (qtdeParcelas < 2) {
+        qtdeParcelas = 2;
+        document.getElementById('qtdeParcelas').value = 2;
+    }
 
     // Saldo devedor
     let totalSaldoDevedor = 0;
@@ -473,6 +492,38 @@ mesesQuitarInput.addEventListener('input', function() {
 qtdeParcelasInput.addEventListener('input', function() {
   mesesQuitarInput.value = this.value;
   mesesQuitarInput.dispatchEvent(new Event('input'));
+});
+
+document.getElementById('qtdeParcelas').addEventListener('keydown', function(e) {
+    // Permitir: setas, tab, backspace, delete, home, end
+    const allowedKeys = [
+        'ArrowUp', 'ArrowDown', 'Tab', 'Backspace', 'Delete', 'Home', 'End', 'ArrowLeft', 'ArrowRight'
+    ];
+    if (
+        allowedKeys.includes(e.key)
+    ) {
+        return; // Permite
+    }
+    // Bloquear números e ponto/virgula
+    if ((e.key >= '0' && e.key <= '9') || e.key === '.' || e.key === ',') {
+        e.preventDefault();
+    }
+});
+
+document.getElementById('mesesQuitar').addEventListener('keydown', function(e) {
+    // Permitir: setas, tab, backspace, delete, home, end
+    const allowedKeys = [
+        'ArrowUp', 'ArrowDown', 'Tab', 'Backspace', 'Delete', 'Home', 'End', 'ArrowLeft', 'ArrowRight'
+    ];
+    if (
+        allowedKeys.includes(e.key)
+    ) {
+        return; // Permite
+    }
+    // Bloquear números e ponto/virgula
+    if ((e.key >= '0' && e.key <= '9') || e.key === '.' || e.key === ',') {
+        e.preventDefault();
+    }
 });
 </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
