--- a/frontend/geral.html
+++ b/frontend/geral.html
@@ -31,26 +31,39 @@
             .container { padding: 10px; }
         }
         #custom-navbar {
-            margin-bottom: 30px;
             position: sticky;
             top: 0;
             z-index: 1000;
+            display: flex;
+            background: linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);
+            box-shadow: 0 2px 8px #0002;
+            border-radius: 0 0 16px 16px;
+            padding: 0 16px;
+            margin-bottom: 30px;
+            border: none;
         }
         .nav-btn {
-            flex:1;
-            background:#90ff90;
-            border:none;
-            border-right:1px solid #fff;
-            font-size:1.2em;
-            padding:12px 0;
-            cursor:pointer;
-            transition: background 0.2s, font-weight 0.2s;
+            flex: 1;
+            background: transparent;
+            border: none;
+            font-size: 1.15em;
+            padding: 16px 0;
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s, font-weight 0.2s;
+            color: #2d5c2f;
+            border-bottom: 3px solid transparent;
+            border-radius: 0 0 12px 12px;
+            margin: 0 4px;
         }
-        .nav-btn:last-child { border-right:none; }
+        .nav-btn:focus,
+        .nav-btn:active,
+        .nav-btn:hover,
         .nav-btn.active {
-            background:#baffba;
-            font-weight:bold;
-            outline:2px solid #000;
+            background: #baffba;
+            color: #007a00;
+            font-weight: bold;
+            border-bottom: 3px solid #007a00;
+            outline: none;
         }
         .section-title { font-weight: bold; font-size: 1.1em; }
         .bordered { border: 2px solid #000; border-radius: 6px; padding: 10px; margin-bottom: 20px; }
@@ -63,15 +76,17 @@
     </style>
 </head>
 <body>
-    <div id="custom-navbar" style="display:flex; border:2px solid #000; background:#90ff90;">
+    <div id="custom-navbar">
         <button onclick="window.location.href='dados-socioeconomicos.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
         <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
         <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
         <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
     </div>
-    <h1 style="color: #2d5c2f; margin-bottom: 30px;">Geral - Superendividamento</h1>
-    <button type="button" class="btn btn-warning mb-3" onclick="limparCampos()">Limpar</button>
     <div class="container">
+        <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px;">
+            <h1 style="color: #2d5c2f; margin-bottom: 0;">Geral - Superendividamento</h1>
+            <button type="button" class="btn btn-warning mb-3" style="background:#baffba; color:#2d5c2f; border:none; font-weight:bold;" onclick="limparCampos()">Limpar</button>
+        </div>
         <div class="row mb-2">
             <div class="col-md-4">
                 <label class="form-label">Consumidor</label>
